# cqrs-demo

./: Cargo.toml
db/: init.sql
src/: aggregate.rs  application.rs  commands.rs  events.rs  main.rs  queries.rs
