[package]
name = "rs-cqrs-demo"
version = "0.0.1"
authors = ["Sebastian Kaiser"]
edition = "2018"

[dependencies]
cqrs-es = "0.0.18"
postgres-es = "0.0.18"

serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1"
gotham = "0.5.0-rc.1"
gotham_derive = "0.5.0-rc.1"

postgres = {version = "0.15.2", features = ["with-serde_json"]}
postgres-shared = "0.4.2"
chrono = "0.4.13"

mime = "0.3"
futures = "0.3.1"
url = "2.1"
